# xarta-node

./: .env.example  .gitignore  README.md  UV_MIGRATION_GUIDE.md  auto-update.sh  bp-backup.sh  bp-nodes-delete.sh  bp-nodes-hosts.sh  bp-nodes-load.sh  bp-nodes-push.sh  bp-nodes-validate.sh  bp-restore.sh  check-caddy-route-parity.sh  check-for-leaks.sh  check-gui-migration-paths.sh  check-old-lone-wolf-paths.sh  pyproject.toml  ruff.toml  setup-blueprints-uv.sh  setup-blueprints.sh  setup-caddy.sh  setup-certificates.sh  setup-desktop-apps.sh  setup-docker.sh  setup-dockge.sh  setup-firewall.sh  setup-github-cli.sh  setup-hosts.sh  setup-lone-wolf.sh  setup-lxc-failover.sh  setup-python-dev-tools.sh  setup-rsync.sh  setup-seekdb.sh  setup-shellcheck.sh  setup-ssh-and-git-xarta.sh  setup-ssh-and-git.sh  setup-syncthing.sh  setup-tailscale-up.sh  setup-user-xarta.sh  setup-vps-ops-tools.sh  (+2 more)
.githooks/: pre-commit
blueprints-app/: WAKE_STT_FOLLOWUP_ROUTING_PLAN.md  blueprints-app-uv.service.template  blueprints-app.service.template  requirements.txt
gui-db/: database-diagram.html  database-diagram.js  database-pages.config.js  database-tables.html  database-tables.js
gui-embed/: README.md  blueprints-node-selector.css  blueprints-node-selector.js  config.example.js  embed.html
gui-fallback/: db  index.html
tests/: conftest.py  test_active_browser_runtime.py  test_auth_time.py  test_bookmarks_seekdb_stability.py  test_config_vps_dockge_optional.py  test_dashboard_auth_targets.py  test_doc_speech_generation.py  test_gpu_monitor_route.py  test_local_llm_events.py  (+34 more)
(+249 files in other folders)
